Page overflow onModalOpen fix

--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -8,12 +8,13 @@
 
 .dialog {
 	z-index: 95;
-	
+
 	@media (screen) and (min-width: 768px) {
 		max-width: 60%;
 	}
 }
 
 html:has(.dialog) {
-	background-color: rgba(23, 23, 23, 0.5); 
+	background-color: rgba(23, 23, 23, 0.5);
+	overflow-y: hidden;
 }
